# swarm-agency

./: .env.example  .gitignore  CONTRIBUTING.md  LAUNCH-POSTS.md  LICENSE  README.md  app.py  demo.cast  launch-posts.md  pyproject.toml  requirements.txt
.claude-memory-backup/: CRITICAL-BLOCKERS-2026-03-13.md  EDGEBOARD-RECOVERY-DECISION.md  ENV_TEMPLATE.md  INFRASTRUCTURE-EXPLORATION-SUMMARY.md  MARCH-13-STATUS-SUMMARY.md  MEMORY.md  TASK-EDGEBOARD-RECOVERY.md  TASK-GWS-OAUTH-SETUP.md  TASK-MCP-RECOVERY.md  ai-agency-landscape-2026.md  ai-agent-builder-patterns-2026.md  ai-ceo-strategy-2026.md  ai-coding-stack-guide-2026.md  ai-factory-stack-guide.md  ai-system-prompts-research.md  autonomous-agents-research.md  big-tech-agent-patterns.md  business-strategy.md  claude-code-quick-wins.md  claude-code-remote-sessions.md  claude-code-setup-complete.md  concrete-canoe-status.md  dashscope-qwen-integration-guide.md  disaster-prevention-guide.md  edgeboard-dashboard-status.md  error-patterns.md  everything-claude-code.md  feedback_delegate_task_files.md  feedback_notebooklm_auth.md  feedback_restart_for_permissions.md  feedback_ship_use_cases.md  feedback_use_ai_factory.md  free-coding-tools-2026.md  github-repos-openclaw.md  github-repos-projects.md  github-repos-tensor-misc.md  mcp-servers-installed.md  mirofish-clone-status.md  notion-setup.md  ollama-gpu-setup.md  (+22 more)
.github/workflows/: ci.yml
.streamlit/: config.toml
agents/: _template.md
agents/creative/: brand-strategist.md  content-lead.md  creative-director.md
agents/engineering/: backend-lead.md  cto.md  devops.md  frontend-lead.md  security-engineer.md
agents/finance/: auditor.md  cfo.md  revenue-strategist.md  risk-analyst.md  tax-optimizer.md
agents/legal/: contract-reviewer.md  (+3 more)
demo/: demo.cast  demo_output.txt  demo_output_ansi.txt  generate_demo.py  record_demo.sh
docs/: launch-posts.md
examples/: basic_agency.py  custom_department.py  learning_loop.py  single_department.py
scripts/: demo-recording.sh  export.py  export_aider.py  export_claude.py  export_cursor.py  export_gemini.py  export_windsurf.py
swarm_agency/: __init__.py  agency.py  agent.py  alerts.py  chat.py  cli.py  demos.py  department.py  dspy_optimizer.py  dual_debate.py  embeddings.py  learning.py  memory.py  messaging.py  optimizer.py  presets.py  providers.py  rounds.py  scheduler.py  server.py  setup.py  soul.py  sports.py  streaming.py  templates.py  tools.py  types.py  verdict.py  web_search.py
tests/: test_agency.py  test_agent.py  test_alerts.py  test_chat.py  test_cli.py  test_department.py  test_dspy_optimizer.py  test_dual_debate.py  test_embeddings.py  test_export.py  test_learning.py  test_memory.py  test_messaging.py  test_optimizer.py  test_presets.py  test_rounds.py  test_routing.py  test_scheduler.py  test_server.py  test_setup.py  test_soul.py  test_sports.py  test_streaming.py  test_templates.py  test_tools.py  test_types.py  test_verdict.py  test_web_search.py
(+26 files in other folders)
