[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swarm-agency"
version = "0.1.0"
description = "Multi-model AI agency where agents debate like departments in a business"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Miles0sage" }]
keywords = ["ai", "agents", "multi-agent", "swarm", "agency", "debate", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
cli = ["rich>=13.0.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "rich>=13.0.0",
]

[project.scripts]
swarm-agency = "swarm_agency.cli:main"

[project.urls]
Homepage = "https://github.com/Miles0sage/swarm-agency"
Repository = "https://github.com/Miles0sage/swarm-agency"
Issues = "https://github.com/Miles0sage/swarm-agency/issues"
